[package]
name = "planit"
version = "0.1.0"
edition = "2024"
description = "Project Management App"
authors = ["Jacob Long <jacoblong853@gmail.com>"]
repository = "https://github.com/jac-oblong/planit"
readme = "readme.org"
license-file = "license"

[dependencies]
better-panic = "0.3.0"
chrono = { version = "0.4.41", features = [ "serde" ] }
crossterm = "0.28.1"
directories = "6.0.0"
log = "0.4.27"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
tui-logger = "0.17.3"
